# Grove

./: .gitattributes  .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  SECURITY.md  deny.toml
crates/grove-cli/: Cargo.toml
crates/grove-cli-old/: Cargo.toml
crates/grove-cli-old/src/: command_context.rs  error_envelope.rs
crates/grove-cli-old/src/commands/: abort.rs  conflicts.rs  git.rs  hook.rs  lint.rs  llm.rs  mod.rs  project.rs  resume.rs  status.rs  subtasks.rs  task_cancel.rs  tasks.rs  workspace.rs
crates/grove-cli-old/src/output/: json.rs  mod.rs
crates/grove-cli/src/: cli.rs  error.rs  exit_codes.rs  main.rs
crates/grove-cli/src/commands/: auth.rs  ci.rs  cleanup.rs  connect.rs  conversation.rs  costs.rs  daemon.rs  doctor.rs  fix.rs  gc.rs  git.rs  hooks.rs  init.rs  issue.rs  issues.rs  llm.rs  logs.rs  merge_status.rs  mod.rs  ownership.rs  plan.rs  project.rs  publish.rs  queue.rs  report.rs  run.rs  sessions.rs  signal.rs  signals.rs  status.rs  tui_cmd.rs  workspace.rs  worktrees.rs
crates/grove-cli/src/output/: json.rs  mod.rs  text.rs
crates/grove-cli/src/transport/: direct.rs  mod.rs  socket.rs
crates/grove-cli/src/tui/: dashboard.rs  mod.rs  run_watch.rs  status_watch.rs
crates/grove-cli/src/tui/widgets/: mod.rs
crates/grove-cli/tests/: daemon_lifecycle.rs
crates/grove-core/: Cargo.toml
crates/grove-core/benches/: cli_benchmarks.rs
crates/grove-core/src/: app.rs  facade.rs  lib.rs  session_log.rs
crates/grove-core/src/agents/: lifecycle.rs  mod.rs  session_record.rs  types.rs
crates/grove-core/src/automation/: conditions.rs  engine.rs  event_bus.rs  markdown.rs  mod.rs  notifier.rs  scheduler.rs  triggers.rs  webhook.rs
crates/grove-core/src/budget/: policy.rs
crates/grove-core/src/capability/: mod.rs
crates/grove-core/src/checkpoint/: mod.rs  payload.rs  store.rs  wal_controller.rs
crates/grove-core/src/config/: agent_config.rs  defaults.rs  loader.rs  mod.rs  paths.rs  validator.rs
crates/grove-core/src/conversations/: policy.rs
crates/grove-core/src/db/: connection.rs  integrity.rs  mod.rs  pool.rs  pragma.rs  test_helpers.rs
crates/grove-core/src/db/repositories/: automations_repo.rs  chatter_threads_repo.rs  checkpoints_repo.rs  conversations_lru.rs  conversations_repo.rs  events_repo.rs  grove_graph_repo.rs  issues_repo.rs  merge_queue_repo.rs  messages_repo.rs  meta_repo.rs  mod.rs  ownership_repo.rs  phase_checkpoints_repo.rs  projects_repo.rs  qa_messages_repo.rs  run_artifacts_repo.rs  runs_repo.rs  sessions_repo.rs  stream_events_repo.rs  users_repo.rs  workspaces_repo.rs
crates/grove-core/src/doctor/: checks.rs  fixes.rs  mod.rs
crates/grove-core/src/errors/: mod.rs
crates/grove-core/src/events/: event_types.rs  mod.rs  model.rs  redaction.rs  writer_queue.rs
crates/grove-core/src/git/: mod.rs  publish.rs
crates/grove-core/src/grove_graph/: chunking.rs  execution.rs  git_ops.rs  loop_orchestrator.rs  mod.rs  orchestrator_dispatch.rs  planning.rs  skill_loader.rs  worker_dispatch.rs
crates/grove-core/src/hooks/: mod.rs
crates/grove-core/src/llm/: anthropic.rs  auth.rs  mod.rs  models.rs  openai.rs
crates/grove-core/src/merge/: executor.rs  mod.rs  policy.rs  queue.rs
crates/grove-core/src/orchestrator/: abort.rs  abort_handle.rs  conversation.rs  engine.rs  handoff.rs  instructions.rs  intent.rs  interactive.rs  issue_context.rs  mod.rs  pipeline.rs  plan_steps_repo.rs  planner.rs  qa_source.rs  resume.rs  run_memory.rs  scope.rs  spawn.rs  state_enums.rs  state_machine.rs  task_decomposer.rs  transitions.rs  verdict.rs  workspace.rs
crates/grove-core/src/ownership/: mod.rs  registry.rs
crates/grove-core/src/providers/: agent_input.rs  budget_meter.rs  catalog.rs  claude_code.rs  claude_code_persistent.rs  gates.rs  line_reader.rs  mcp_inject.rs  mock.rs  mod.rs  question_detector.rs  registry.rs  retry.rs  stream_parser.rs  timeout.rs
crates/grove-core/src/providers/coding_agent/: adapter.rs  aider.rs  amp.rs  auggie.rs  cline.rs  codex.rs  continue_agent.rs  copilot.rs  cursor.rs  gemini.rs  goose.rs  kilocode.rs  kimi.rs  kiro.rs  (+3 more)
crates/grove-core/src/publish/: mod.rs
crates/grove-core/src/reporting/: markdown.rs  mod.rs  report_model.rs
crates/grove-core/src/signals/: mod.rs
crates/grove-core/src/token_filter/: metrics.rs  mod.rs  project_type.rs  session.rs  shim.rs  token_count.rs
crates/grove-core/src/tracker/: ci.rs  credentials.rs  github.rs  jira.rs  linear.rs  linter.rs  mod.rs  registry.rs  status.rs  sync.rs  write_back.rs
crates/grove-core/src/watchdog/: mod.rs
crates/grove-core/src/worktree/: cleanup.rs  conflict_ui.rs  conversation.rs  git_ops.rs  gitignore.rs  manager.rs  merge.rs  mod.rs  paths.rs  preserve.rs
crates/grove-core/tests/: claude_warm_path.rs  resume_seeding_locked.rs
crates/grove-daemon/: Cargo.toml
crates/grove-daemon/src/: config.rs  lib.rs  main.rs  queue_drain.rs  server.rs  session_host.rs
crates/grove-daemon/src/lifecycle/: mod.rs  pidfile.rs
crates/grove-daemon/src/rpc/: auth.rs  connect.rs  conversations.rs  envelope.rs  health.rs  hooks.rs  issues.rs  locks.rs  logs.rs  maintenance.rs  mod.rs  projects.rs  quality.rs  runs.rs  signals.rs  tasks.rs  workspace.rs  worktrees.rs
crates/grove-daemon/tests/: dispatcher.rs  envelope_roundtrip.rs  health_e2e.rs  hive_warm_host.rs  persistent_session.rs  route_coverage.rs  skeleton.rs
crates/grove-db-lookup/: Cargo.toml
crates/grove-db-lookup/src/: main.rs
crates/grove-db-lookup/web/: index.html  package-lock.json  package.json  vite.config.ts
crates/grove-db-lookup/web/src/: App.tsx  api.ts
crates/grove-filter/: Cargo.toml
crates/grove-filter/src/: main.rs
crates/grove-gui/src-tauri/: Cargo.toml  tauri.conf.json
crates/grove-gui/src-tauri/capabilities/: default.json
crates/grove-gui/src-tauri/icons/: icon.icns
crates/grove-gui/src-tauri/src/: main.rs  state.rs
crates/grove-mcp-server/: Cargo.toml
crates/grove-mcp-server/src/: errors.rs  main.rs
crates/grove-mcp-server/src/tools/: graph.rs  helpers.rs  mod.rs  phase.rs  run.rs
(+261 files in other folders)
