[workspace]
members = [
  "crates/grove-core",
  "crates/grove-cli-old",
  "crates/grove-gui/src-tauri",
  "crates/grove-mcp-server",
  "crates/grove-filter",
]
exclude = [
  "crates/grove-db-lookup",
]
resolver = "2"

[workspace.package]
version = "0.1.1"
edition = "2024"
license = "Apache-2.0"
authors = ["Farooq A. Rahim"]
rust-version = "1.85"

[workspace.dependencies]
anyhow = "1.0"
clap = { version = "4.5", features = ["derive"] }
chrono = { version = "0.4", features = ["serde"] }
rusqlite = { version = "0.32", features = ["bundled"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
thiserror = "2.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
uuid = { version = "1.11", features = ["v4", "v5", "serde"] }
which = "7.0"
ignore = "0.4"
regex = "1"
tempfile = "3"
assert_cmd = "2"
predicates = "3"
reqwest = { version = "0.12", features = ["blocking", "json", "rustls-tls"], default-features = false }
dirs = "5"
keyring = { version = "3", features = ["apple-native", "linux-native"] }
base64 = "0.22"
portable-pty = "0.8"
pty-process = { version = "0.5", features = ["async"] }
libc = "0.2"
gix = { version = "0.70", default-features = false, features = ["status", "blob-diff", "revision", "dirwalk"] }
bstr = "1"
globset = "0.4"
r2d2 = "0.8"
r2d2_sqlite = "0.25"
tokio = { version = "1", features = ["rt", "sync", "time", "macros", "net"] }
cron = "0.13"
axum = "0.8"
tower = "0.5"
hmac = "0.12"
sha2 = "0.10"
notify-rust = "4"
parking_lot = "0.12"
criterion = { version = "0.5", features = ["html_reports"] }
