[package]
name = "grove-cli-old"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
rust-version.workspace = true

[[bin]]
name = "grove"
path = "src/main.rs"

[dependencies]
anyhow.workspace = true
clap.workspace = true
serde_json.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
grove-core = { path = "../grove-core" }
rusqlite.workspace = true

[dev-dependencies]
tempfile.workspace = true
assert_cmd.workspace = true
predicates.workspace = true
serde_json.workspace = true
grove-core = { path = "../grove-core" }
rusqlite.workspace = true

# ── E2E tests ─────────────────────────────────────────────────────────────────
[[test]]
name = "init_run_report_flow_tests"
path = "../../tests/e2e/init_run_report_flow_tests.rs"

[[test]]
name = "crash_resume_flow_tests"
path = "../../tests/e2e/crash_resume_flow_tests.rs"

[[test]]
name = "budget_exceeded_flow_tests"
path = "../../tests/e2e/budget_exceeded_flow_tests.rs"

[[test]]
name = "merge_conflict_safety_tests"
path = "../../tests/e2e/merge_conflict_safety_tests.rs"

# ── Contract tests ────────────────────────────────────────────────────────────
[[test]]
name = "cli_json_contract_tests"
path = "../../tests/contract/cli_json_contract_tests.rs"
