[package]
name = "grove-mcp-server"
version = "0.1.0"
edition = "2021"
license.workspace = true
authors.workspace = true
rust-version.workspace = true

[[bin]]
name = "grove-mcp-server"
path = "src/main.rs"

[dependencies]
rusqlite = { version = "0.32", features = ["bundled"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
uuid = { version = "1", features = ["v4"] }
chrono = "0.4"
tokio = { version = "1", features = ["rt", "macros", "time", "io-util", "io-std"] }
